--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "seed": "node seeds/"
   },
   "repository": {
     "type": "git",
@@ -28,6 +29,7 @@
     "handlebars": "^4.7.7",
     "moment": "^2.29.1",
     "mysql2": "^2.2.5",
+    "path": "^0.12.7",
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
